fixed: overflow-x pgs

--- a/css/about.css
+++ b/css/about.css
@@ -8,7 +8,7 @@ body#about {
     width: 100vw;
 
     padding: 3rem 8rem;
-    overflow: unset;
+    overflow-x: hidden;
 }
 
 body#about::after{
