--- a/css/work.css
+++ b/css/work.css
@@ -1,7 +1,3 @@
-html {
-    overflow-x: hidden;
-}
-
 #work {
     background-image: url('../images/tattoo-eqp.jpg');
     background-position: bottom;
@@ -12,7 +8,7 @@ html {
     width: 100vw;
 
     padding: 3rem 8rem;
-    overflow: unset;
+    overflow-x: hidden;
 }
 
 #work::after{
